# marvel-collection

./: .env.example  .gitignore  App.js  Cargo.toml  LICENSE  README.md  app.json  bun.lockb  cloudflare.yaml  docker-compose.yaml  index.html  justfile  package.json  tsconfig.json  uno.config.ts
app/: .env.example  Cargo.toml  Dioxus.toml  bun.lockb  index.html  package.json  tsconfig.json  unocss.config.ts
app-ui/: Cargo.toml  pnpm-lock.yaml  unocss.config.ts
app-ui/src/: Card.rs  main.rs  types.rs
app-ui/src/api_service/: marvel.rs  mod.rs
app-ui/src/components/: Card.rs  Footer.rs  Header.rs  HeroProfile.rs  Home.rs  Nav.rs  mod.rs
app/assets/: tailwind.min.css  uno.css
app/src/: App.css  App.tsx  main.css  main.rs  main.tsx
app/src/api/: index.ts
app/src/api_service/: marvel.rs  mod.rs
app/src/assets/: tailwind.min.css
app/src/components/: Card.rs  Footer.rs  Header.rs  HeroProfile.rs  Home.rs  Nav.rs
app/src/components/Card/: index.tsx
app/src/components/Characters/: index.tsx
app/src/components/Home/: index.tsx
app/src/components/Nav/: index.tsx
app/src/components/NavBar/: index.tsx
app/src/interfaces/: characters.tsx
app/src/libs/lib-ui/components/: Card.tsx  Character.tsx  CharacterList.tsx  LazyComics.tsx  Loading.tsx  Modal.tsx  index.ts
app/src/libs/lib-ui/components/Cards/: CardStateful.tsx  CardStateless.tsx
app/src/libs/lib-ui/pages/: CharacterPage.tsx  ComicsPage.tsx  ErrorPage.tsx  Home.tsx  HomePage.tsx  Layout.tsx  index.ts
app/src/services/: api.ts  fetchAndCache.ts  fetchOrigin.ts  index.ts
app/src/state/: characterSlice.ts  combinedReducers.ts  store.ts
app/src/state/interfaces/: characterState.ts  marvelState.ts
app/src/store/: characterSlice.ts  comicSlice.ts  index.ts  modalSlice.ts  offsetSlice.ts
app/src/types/: characters.rs  characters.ts  comics.rs  comics.ts  index.ts  mod.rs
src/backend/: FetchComicList.js  FetchHeroList.js  fetching.js  index.js
src/components/: CharCard.js  CharList.js  CharProfileDetail.js  CharProfileHeader.js  ComicItem.js  ComicList.js  SearchBar.js
src/components/commons/: Header.js  Section.js  Toast.js
src/navigation/: AppDescription.js  CharProfile.js  Home.js
src/reducers/: ComicListReducer.js  HeroListReducer.js  index.js
