[package]
name = "marvel-collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# console_error_panic_hook = "0.1.7"
wasm-logger = "*"
log = "*"
dioxus = "*"
dioxus-router = "*"
dioxus-web = "*"
gloo-net = "*"
serde = { version = "*", features = ["derive"] }
# cached = { version = "*", features = ["wasm"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
