[package]
name = "marvel-collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = { version = "*", features = ["ws"] }
# axum-extra = { version = "*", features = ["spa"] }
cached = { version = "*", features = ["wasm"] }
dioxus-router = { version = "*", features = ["wasm-bindgen"] }
dioxus = "*"
dioxus-liveview = { version = "*", features = ["axum"] }
dioxus-web = "*"
fermi = "*"
gloo = "*"
# log = version = "*"
serde = { version = "*", features = ["derive"] }
# serde_json = "*"
# tokio = "*"
wasm-log = "*"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
